refactored image rendering. css no longer pushes image offscreen on window resize

--- a/res/style.css
+++ b/res/style.css
@@ -41,12 +41,7 @@ pre code {
 }
 
 #image {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	margin-top: 33%;
-	text-align: center;
+	margin-bottom: 300px;
 }
 
 
